tree-sitter-cao_lang/test/corpus/assignment.txt
==================
property assignment
==================

fn f(a) {
    a.b = 1;
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list
      (identifier))
    (block
      (set_property_statement
        target: (postfix_expression
          (identifier)
          property: (identifier))
        value: (expression
          (integer))))))

==================
index assignment
==================

fn f(a) {
    a[0] = 1;
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list
      (identifier))
    (block
      (set_property_statement
        target: (postfix_expression
          (identifier)
          index: (expression
            (integer)))
        value: (expression
          (integer))))))

==================
call as statement
==================

fn f() {
    g();
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (expression_statement
        (expression
          (call_expression
            function: (identifier)))))))
