tree-sitter-cao_lang/test/corpus/expressions.txt
==================
multiplicative binds tighter than additive
==================

fn f() {
    return 1 + 2 * 3;
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (return_statement
        (expression
          (binary_expression
            left: (expression
              (integer))
            right: (expression
              (binary_expression
                left: (expression
                  (integer))
                right: (expression
                  (integer))))))))))

==================
comparison binds loosest
==================

fn f() {
    return 1 + 2 <= 3 * 4;
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (return_statement
        (expression
          (binary_expression
            left: (expression
              (binary_expression
                left: (expression
                  (integer))
                right: (expression
                  (integer))))
            right: (expression
              (binary_expression
                left: (expression
                  (integer))
                right: (expression
                  (integer))))))))))

==================
left-associativity of additive operators
==================

fn f() {
    return 1 - 2 - 3;
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (return_statement
        (expression
          (binary_expression
            left: (expression
              (binary_expression
                left: (expression
                  (integer))
                right: (expression
                  (integer))))
            right: (expression
              (integer))))))))

==================
float literal
==================

fn f() {
    return 1.5;
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (return_statement
        (expression
          (float))))))

==================
string literal with escapes
==================

fn f() {
    return "hi\n\u{1F600}";
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (return_statement
        (expression
          (string
            (string_content)
            (escape_sequence)
            (escape_sequence)))))))

==================
negative integer literal
==================

fn f() {
    return -5;
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (block
      (return_statement
        (expression
          (integer))))))

==================
subtraction is not swallowed by signed literal
==================

fn f(a) {
    return a - 5;
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list
      (identifier))
    (block
      (return_statement
        (expression
          (binary_expression
            left: (expression
              (identifier))
            right: (expression
              (integer))))))))

==================
subtraction of a negative literal
==================

fn f(a) {
    return a - -5;
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list
      (identifier))
    (block
      (return_statement
        (expression
          (binary_expression
            left: (expression
              (identifier))
            right: (expression
              (integer))))))))

==================
else-less if expression
==================

fn f(n) {
    return if n <= 2 { n };
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list
      (identifier))
    (block
      (return_statement
        (expression
          (if_expression
            condition: (expression
              (binary_expression
                left: (expression
                  (identifier))
                right: (expression
                  (integer))))
            consequence: (expression_block
              (expression
                (identifier)))))))))
